[6.November 2008]
- tests/...: fixes of tests broken after modifications in BottomPanel,
  Map loading etc.
- monstermixins.rb: RD->RDoc; fixed one problem in mixin HeroBashing;
  documentation for HeroBashing improved
- structuredworld.rb: fixed error in log message
- location.rb: removed method Location#background
- warior.rb, sprinter.rb, shielder.rb: a bit cleaner way of loading Model
(Modifications listed above took 2 hours and were done because of fixing broken
tests.)
- bomb.rb: Bomb has a visible flame
- docs/develop_guide/ : on Monday or so I worked on the Developer's guide

[1.November 2008]
- bomb.rb: bomb only kills Heroes and Monsters, not all sprites;
           fired bombs are forced to explode
- wall.rb, bomb.rb, BombEtc testing level, gfx/brick*.tga: new game object - 
  smashable wall

[31.October 2008]
- level music stops again when level is exitted (it was broken)
- monsters/snail.rb: fixed possible cause of "snail out of map" problem
- Meadow level: fixed position of snails
- trash.rb, bottompanel.rb, bottompanelstate.rb, inventory.rb, 
  inventoryview.rb, gfx/trash.rb: visual trash added (with possibility
  to put there items in the regular way either using keyboard or mouse)
- bomb.rb, testing level for Bomb: new game object - bomb (currently
  it just kills vikings and other sprites, in future it will also destroy
  walls)

[30.October 2008]
- bottompanel.rb, game.rb, gamestate.rb: Dragged item is shown during
  drag&drop item exchange
- initfv.rb: possibility to switch sound on/off from menu

[29.October 2008]
- transporter.rb, monsters/lift.rb: Fixed "lift down problem":
  Transporter#update_transported_sprites divided into two methods,
  because Transporters, which move transported sprites also in y-axis,
  have to move themselves between updating list of transported sprites
  and moving them in order to ensure that area to which transported sprites 
  are moved is already free at the time of the operation