@@ -1,3 +1,8 @@
+[12.November 2008]
+- game.rb: possibility to cancel loading of a level (press Escape)
+- bomb.rb: Flame is animated; destruction is done by Flame, not by
+  BombSprite
+
 [6.November 2008]
 - tests/...: fixes of tests broken after modifications in BottomPanel,
   Map loading etc.
